[package]
name = "vntop"
version = "0.1.2"
edition = "2024"
authors = ["Hakkı Anıl Ragıboğlu <hakkianilragiboglu@gmail.com>"]
description = "Table of Processes tool written in Rust."
license = "MIT"
repository = "https://github.com/hanilr/vntop"
readme = "README.md"
keywords = ["tui", "system-monitor", "cli", "linux"]
categories = ["command-line-utilities"]

[dependencies]
colored = "3.1.1"
crossterm = "0.29.0"
sysinfo = "0.38.4"
